tests/snapshots/test_runner__tests__compiler__typecheck__enum_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> = Some(T) None

do
  let a = Some(None)
  let x: Option<String> = a
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_3.kk:5:27
  │
5 │   let x: Option<String> = a
  │                           ^ Type mismatch
  │
  = +---------------+-------------------+
    | EXPECTED TYPE |    ACTUAL TYPE    |
    +---------------+-------------------+
    |   Option<     |   Option<         |
    |     T         |     T             |
    | -     String, | +     Option<     |
    |   >           | +       T         |
    |               | +         @TVAR1, |
    |               | +     >,          |
    |               |   >               |
    +---------------+-------------------+
